# projetBDD2025

./: .gitignore  README.md  exemple.ipynb  manage.py  pyproject.toml  remplir_adresses.py  ruff.toml
.github/workflows/: model-graph.yml
agence/: admin.py  apps.py  django.py  forms.py  models.py  urls.py  views.py
agence/management/commands/: peupler_data.py
agence/static/: style.css
agence/templates/agence/: _case_bien.html  _form_fields.html  _messages.html  base.html  create_Bien.html  create_agence.html  create_bien.html  create_user.html  index.html  list_bien.html  list_users.html  profil_acheteur.html  profil_agent.html  profil_vendeur.html  recherche_bien.html  rendezvous_vendeur.html  update_etat.html
gestion_immo/: asgi.py  settings.py  urls.py  wsgi.py
